Twenty Eleven: Fix issues with theme's Gutenberg support.
A handful of issues were missed in Twenty Eleven's Gutenberg support, added in #45039. This commit includes the following fixes:

* Center text and bullets in list-based widget blocks when block itself is centered.
* Include non "image" variations of the Cover block classes `.wp-block-cover` and `.wp-block-cover-text` in the styles.
* Add spacing underneath the Media & Text block, but make sure final paragraph in the block doesn't add too much space.
* Simplify selectors used to set editor width to just `.wp-block`.
* Prevent margin from theme's editor-style.css from interfering with editor alignment. 

Props pento, davidakennedy.
Fixes #45239.


Built from https://develop.svn.wordpress.org/branches/5.0@43870


git-svn-id: http://core.svn.wordpress.org/branches/5.0@43699 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyeleven/editor-blocks.css
+++ b/wp-content/themes/twentyeleven/editor-blocks.css
@@ -72,10 +72,12 @@ Description: Used to style Gutenberg Blocks in the editor.
 
 /* Main column width */
 
-body.gutenberg-editor-page .edit-post-visual-editor .editor-post-title__block,
-body.gutenberg-editor-page .edit-post-visual-editor .editor-default-block-appender,
-body.gutenberg-editor-page .edit-post-visual-editor .editor-block-list__block {
-	max-width: 614px;
+.editor-styles-wrapper {
+	max-width: 100% !important; /* Override where editor-style.css is affecting this. */
+}
+
+.wp-block {
+	max-width: 614px; /* 584px + 30px to account for padding */
 }
 
 /* Link styles */
@@ -288,10 +290,10 @@ p.has-drop-cap:not(:focus)::first-letter {
 	font-size: 16px;
 }
 
+/* Cover */
 
-/* Cover Image */
-
-.edit-post-visual-editor .editor-block-list__block .wp-block-cover-image p.wp-block-cover-image-text {
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover-image p.wp-block-cover-image-text,
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover p.wp-block-cover-text {
 	font-size: 30px;
 	line-height: 37.5px;
 }
@@ -385,9 +387,25 @@ p.has-drop-cap:not(:focus)::first-letter {
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
 }
 
+/* Media & Text */
+
+.wp-block-media-text *:last-child {
+	margin-bottom: 0;
+}
+
 /*--------------------------------------------------------------
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
+
+/* Archives, Categories & Latest Posts */
+
+[data-align="center"] .wp-block-archives ul,
+[data-align="center"] .wp-block-categories ul,
+[data-align="center"] .wp-block-latest-posts ul {
+	list-style-position: inside;
+	margin-left: 2.5em;
+	text-align: center;
+}
 
 /* Latest Comments */
 
